# mcp-template

./: .pre-commit-config.yaml  LICENSE  README.md  env.example  main.py  pyproject.toml  run_format.sh  run_lint.sh
.github/workflows/: ci.yml  release.yml
src/: main.py  mcp_server.py  server.py  tools.py  utils.py
src/tools/: tool_utils.py
tests/: __init__.py  conftest.py  test_main.py  test_tool_utils.py
