[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MY_MCP_PACKAGE_NAME"
version = "0.1.0"
description = "MY_MCP_DESCRIPTION"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = [
  "I", # isort
  # "D", # Docstrings. Define the type below.
]

# [tool.ruff.lint.pydocstyle]
# convention = "google"  # Suggested docstring style.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[project.scripts]
MY_MCP_PACKAGE_NAME = "src.main:main"
